k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: andreas-nginx-demo
  labels:
    app: andreas-nginx-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: andreas-nginx-demo
  template:
    metadata:
      labels:
        app: andreas-nginx-demo
    spec:
      containers:
        - name: nginx
          image: quay.io/kurs/demoserver-a:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
