k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: andreas-nginx-demo
  labels:
    app: andreas-nginx-demo
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  selector:
    app: andreas-nginx-demo
